--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "tsNode": "cd src && ts-node index.ts",
     "start": "nodemon",
-    "transpilation": "tsc"
+    "transpilation": "tsc",
+    "build:prod": "rimraf ./build && tsc",
+    "start:prod": "npm run build:prod && node build/index.js"
   },
   "keywords": [
     "typescript",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20.2.0",
     "nodemon": "^2.0.22",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
