--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "cookies-utils": "^1.0.0"
   }
 }
