--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "tsNode": "cd src && ts-node index.ts",
     "start": "nodemon",
+    "linting": "eslint",
+    "linting:fix": "eslint --fix",
     "transpilation": "tsc",
     "build:prod": "rimraf ./build && tsc",
     "start:prod": "npm run build:prod && node build/index.js"
@@ -19,6 +21,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
