--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon",
     "linting": "eslint",
     "linting:fix": "eslint --fix",
+    "document": "typedoc --out docs src",
     "transpilation": "tsc",
     "build:prod": "rimraf ./build && tsc",
     "start:prod": "npm run build:prod && node build/index.js"
@@ -30,6 +31,7 @@
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.24.7",
     "typescript": "^5.0.4"
   },
   "dependencies": {
